[package]
name = "merkle-storage"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "common",
]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "./common" }
tokio = { version = "1.28.1", features = ["full"] }
actix-web = "4.3.1"
futures = "0.3"
hmac-sha256 = "1.1.6"
hex = "0.4.3"
tokio-postgres = "0.7.8"
deadpool-postgres = { version = "0.10.5", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }
log = "0.4.17"
prometheus = "0.13.3"
lazy_static = "1.4.0"